# plee-the-bear

./: .gitignore  CMakeLists.txt  Makefile  README.md  plee-the-bear  run-game.sh
data/: CMakeLists.txt  check_authors.sh  common.scm  create-plee-alt.sh  credits.txt
data/animation/: air_bubble_generator.anim  air_bubble_generator.canim  checkpoint-1.anim  checkpoint-1.canim  checkpoint-2.anim  checkpoint-2.canim  corrupting-bonus-disapearing.anim  corrupting-bonus-disapearing.canim  corrupting-bonus.anim  corrupting-bonus.canim  headstone.anim  headstone.canim  light-flash.anim  light-flash.canim  shiny-honey-jar.anim  shiny-honey-jar.canim  smoke.anim  smoke.canim  stars.anim  stars.canim  steam.anim  steam.canim  water.anim  water.canim
data/animation/castle/: corrupting-bonus.canim  fire.anim  fire.canim  kicker.anim  kicker.canim  platform.anim  platform.canim  spring_medium.anim  spring_medium.canim  spring_strong.anim  spring_strong.canim  spring_weak.anim  spring_weak.canim  torch.anim  torch.canim
data/animation/common/: spring.canim  spring_orange.anim  spring_orange.canim  spring_red.anim  spring_yellow.anim  spring_yellow.canim
data/animation/effect/: bubbles.anim  bubbles.canim  clod.anim  clod.canim  ground-blast-side.anim  ground-blast-side.canim  ground-blast.anim  ground-blast.canim
data/animation/forest/: bridge-plank.anim  bridge-plank.canim  corrupting-carrot.anim  kicker.anim  kicker.canim  platform.anim  platform.canim  splash-block.anim  splash-block.canim  spring_orange.anim  spring_orange.canim  spring_red.anim  spring_red.canim  spring_yellow.anim  spring_yellow.canim  waterfall-top.anim  waterfall-top.canim  waterfall.anim  waterfall.canim  woodlog-thrower.anim  woodlog-thrower.canim
data/animation/god/: appearing.anim  appearing.canim  ball-creation.anim  ball-creation.canim  ball.anim  ball.canim  disappearing.anim  disappearing.canim  hand.anim  hand.canim  human-idle.anim  human-idle.canim  human-talking.anim  human-talking.canim  stork-disappearing.anim  stork-disappearing.canim  stork-flying.anim  stork-flying.canim
data/animation/owl/: hazelnut.anim  hazelnut.canim  owl_bye.anim  owl_bye.canim  owl_speaking.anim  owl_speaking.canim  owl_waiting.anim  owl_waiting.canim  owl_with_nut.anim  owl_with_nut.canim
data/animation/plee/: arm.anim  arm.canim  cap.anim  cap.canim  captive.canim  cling.anim  cling.canim  clung_jump.anim  clung_jump.canim  crouch.anim  crouch.canim  dream.anim  dream.canim  drown.anim  drown.canim  fall.anim  fall.canim  float.anim  float.canim  float_and_swim.anim  (+53 more)
data/animation/plee-alt/: arm.anim  arm.canim  bath-cap.anim  bath-cap.canim  cap.anim  cap.canim  cling.anim  cling.canim  clung_jump.anim  clung_jump.canim  crouch.anim  crouch.canim  dream.anim  dream.canim  drown.anim  drown.canim  fall.anim  fall.canim  float.anim  float.canim  float_and_swim.anim  float_and_swim.canim  halo.anim  halo.canim  halo_hand.canim  hang.anim  hang.canim  idle.anim  idle.canim  injured.anim  injured.canim  jump.anim  jump.canim  look_upward.anim  look_upward.canim  maintain.anim  maintain.canim  maintain_and_fall.anim  maintain_and_fall.canim  maintain_and_walk.anim  (+36 more)
data/font/: AUTHORS  README  bouncy.fnt  bouncy.scm  bouncy.xcf.bz2  fixed-10x20-unicode.fnt  fixed-10x20.fnt  fixed-10x20.scm  fixed-10x20.xcf.bz2  fixed_white-7x12.fnt  fixed_white-7x12.xcf  fixed_yellow-10x20.fnt  level_name-42x50.fnt  level_name-42x50.scm  level_name-42x50.xcf.bz2  speech.fnt  speech.xcf.bz2
data/gfx/: AUTHORS  bonus-box-1.scm  bonus-box-1.spritepos  bonus-box-2.scm  bonus-box-2.spritepos  bonus-box-3.scm  bonus-box-3.spritepos  bonus-box.xcf.bz2  bubble.scm  bubble.spritedesc  bubble.spritepos  bubble.xcf.bz2  checkpoint.scm  checkpoint.spritepos  checkpoint.xcf.bz2  corrupting-bonus-disapearing.scm  corrupting-bonus-disapearing.spritepos  corrupting-bonus-disapearing.xcf.bz2  gamned.xcf  headstone-frames.xcf.bz2  headstone-sprites.scm  headstone.xcf.bz2  honey-jar-menu.xcf  info-board.spritepos  info-board.xcf.bz2  splash.scm  splash.spritepos  splash.xcf.bz2  water.scm  water.spritedesc  water.spritepos  wave.xcf
data/level/: bug.cl  bug.lvl  castle-1.cl  castle-1.lvl  castle-2.cl  castle-2.lvl  dummy.cl  dummy.lvl  forest-1.cl  forest-1.lvl  forest-2.cl  forest-2.lvl  forest-boss.cl  forest-boss.lvl  forest-intro.cl  forest-intro.lvl  gamned.cl  gamned.lvl  init.cl  init.lvl  jeremie.cl  jeremie.lvl  loading.cl  loading.lvl  minimal.cl  minimal.lvl  quick-end.cl  quick-end.lvl  sandbox.cl  sandbox.lvl  start.cl  start.lvl  stuffomatic-ro.cl  stuffomatic-ro.lvl  title_screen.cl  title_screen.lvl  transition.cl  transition.lvl  tutorial.cl  tutorial.lvl
data/mini-game/: informations.txt
data/model/: god.cm  god.mdl  headstone.cm  headstone.mdl  little_plee.cm  little_plee.mdl  owl.cm  owl.mdl  projectile_enemy.cm  projectile_enemy.mdl
data/music/: 1-up.tg  AUTHORS  bonus.mid  bonus.tg  boss.mid  boss.tg  castle.mid  castle.rg  castle.tg  forest-1.mid  game-over.mid  game-over.tg  invincibility.mid  invincibility.tg  quick-end.mid  quick-end.tg  title-screen.mid  title-screen.tg
data/script/: sandbox.txt  stuffomatic-ro-ok.txt  stuffomatic-ro.txt
data/shader/: blur.frag  greyscale.frag  holes.frag  lines.frag  mono.frag  tunnel_common.frag  tunnel_origin.frag  tunnel_target.frag
data/sound/: AUTHORS  checkpoint-slide.wav.bz2  corrupting-bonus.flac  hit.flac
desktop/: CMakeLists.txt
desktop/applications/: plee-the-bear.desktop
desktop/locale/: CMakeLists.txt
desktop/man/: CMakeLists.txt  plee-the-bear.sgml
desktop/menu/: plee-the-bear
desktop/pixmaps/: ptb.xpm
launcher/src/: CMakeLists.txt  launcher.hpp  resources.rc
src/ptb/: CMakeLists.txt  config_file.hpp  controller_config.hpp  controller_layout.hpp  controller_map.hpp  defines.hpp  end.hpp  game_variables.hpp  gauge.hpp  gui_command.hpp  init.hpp  level_information.hpp  level_variables.hpp  mini_game_information.hpp  playability_type.hpp  player.hpp  player_action.hpp  player_pending_action.hpp  player_proxy.hpp  player_signals.hpp  score_table.hpp
(+1865 files in other folders)
